--- a/ExpenseTracker/Views/InvoiceFormPage.xaml
+++ b/ExpenseTracker/Views/InvoiceFormPage.xaml
@@ -22,7 +22,7 @@
                            HorizontalOptions="Center"/>
 
         <!-- Error message -->
-        <Frame IsVisible="{Binding HasError}"
+        <Border IsVisible="{Binding HasError}"
                BackgroundColor="Red"
                Padding="16"
                Margin="16"
@@ -30,7 +30,7 @@
             <Label Text="{Binding ErrorMessage}"
                    TextColor="White"
                    HorizontalTextAlignment="Center"/>
-        </Frame>
+        </Border>
 
         <!-- Form content -->
         <ScrollView IsVisible="{Binding IsNotLoading}"
